add routes, create controller action

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,9 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li>
-            <%= link_to  do %>
+            <%= link_to new_coffeebean_path do %>
               <i class="glyphicon glyphicon-plus-sign"></i>
-              Coffee
+              New Mug
             <% end %>
           </li>
         </ul>
