--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
         <ul class="nav navbar-nav">
           <li>
             <%= link_to new_coffeebean_path do %>
-              <i class="glyphicon glyphicon-plus-sign"></i>
+              <i class="glyphicon glyphicon-tint"></i>
               New Mug
             <% end %>
           </li>
