--- a/app/views/coffeebeans/new.html.erb
+++ b/app/views/coffeebeans/new.html.erb
@@ -7,6 +7,9 @@
     <%= f.input :brand %>
     <%= f.input :roast_type %>
     <%= f.input :best_by %>
+    <%= f.input :notes %>
+    <%= f.input :score, collection: 1..10 %>
+    <br />
     <%= f.submit 'Post it mon!', class: 'my-btn' %>
   <% end %>
 
