--- a/app/views/coffeebeans/index.html.erb
+++ b/app/views/coffeebeans/index.html.erb
@@ -1,16 +1,24 @@
+<h3> My Shelf </h3>
 
-<% @coffeebeans.each do |coffee| %>
-  <div>
-    <h1><%= coffee.name %></h1><br />
-    <i><%= coffee.roast_type %></i><br />
-    <p><%= coffee.best_by %></p><br />
-
+  <% @coffeebeans.each do |coffee| %>
+  <div class="card col-xs-10 col-offset-1">
+    <div class="card-block">
+      <h4 class="card-title"> <%= coffee.name %> </h4>
+      <h6 class="card-subtitle mb-2 text-muted"> <%= coffee.brand %> </h6>
+      <h6 class="card-subtitle mb-2 text-muted"> <%= coffee.roast_type %> </h6>
+      <p class="card-text"> <strong>Notes:</strong> <%= coffee.notes %> </p>
+      <p class="card-text"> <strong>Best by:</strong> <%= coffee.best_by %> </p>
+      <p class="card-text"> <strong>My Score:</strong> <%= coffee.score %> </p>
+    </div>
     <br />
-
-    <% if coffee.user.present? %>
-      <small><%= place.user.email %></small>
-    <% end %>
   </div>
 
-  <hr />
-<% end %>
+    <div class="pull-right">
+      <% if current_user == coffee.user %>
+        <%= link_to 'Edit', edit_coffeebean_path(coffee) %>
+        <%= link_to 'Delete', coffeebean_path(coffee), method: :delete, data: {confirm: 'You sure about that?'} %>
+      <% end %>
+    </div>
+  <% end %>
+  </div>
+</div>
