--- a/app/views/coffeebeans/edit.html.erb
+++ b/app/views/coffeebeans/edit.html.erb
@@ -1,12 +1,12 @@
 <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 card form">
 
-  <h1> Edit Yo Beans </h1>
+  <h1> <strong>Edit Yo Beans</strong> </h1>
 
   <%= simple_form_for @coffeebeans do |f| %>
     <%= f.input :name %>
     <%= f.input :brand %>
     <%= f.input :roast_type %>
-    <%= f.input :best_by %>
+    <%= f.input :best_by, :as => :date_picker %>
     <%= f.input :notes %>
     <%= f.input :score, collection: 1..10 %>
     <%= f.submit 'Change it mon!', class: 'my-btn' %>
