--- a/app/views/coffeebeans/index.html.erb
+++ b/app/views/coffeebeans/index.html.erb
@@ -7,7 +7,7 @@
       <h6 class="card-subtitle mb-2 text-muted"> <%= coffee.brand %> </h6>
       <h6 class="card-subtitle mb-2 text-muted"> <%= coffee.roast_type %> </h6>
       <p class="card-text"> <strong>Notes:</strong> <%= coffee.notes %> </p>
-      <p class="card-text"> <strong>Best by:</strong> <%= coffee.best_by %> </p>
+      <p class="card-text"> <strong>Best by:</strong> <%= datetime_to_compact_date coffee.best_by %> </p>
       <p class="card-text"> <strong>My Score:</strong> <%= coffee.score %> </p>
       <% if current_user == coffee.user %>
         <%= link_to 'Edit', edit_coffeebean_path(coffee) %>
