--- a/app/views/coffeebeans/new.html.erb
+++ b/app/views/coffeebeans/new.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 card form">
 
-  <h1> New Beans </h1>
+  <h1> <strong>New Beans</strong> </h1>
 
   <%= simple_form_for @coffeebeans do |f| %>
     <%= f.input :name %>
@@ -21,9 +21,8 @@
                                "Espresso",
                                "Italian",
                                "French"] %>
-    <%= f.input :best_by, as: :datepicker %>
+    <%= f.input :best_by, :as => :date_picker %>
     <%= f.input :notes %>
     <%= f.input :score, collection: 1..10 %>
-    <br />
-    <%= f.submit 'Post it mon!', class: 'my-btn' %>
+    <%= f.submit 'Shelf it', class: 'btn-success btn-sm' %>
   <% end %>
