revert change to app

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,7 @@
           <li>
             <% if user_signed_in? %>
               <%= link_to new_coffeebean_path do %>
-                <i class="glyphicon glyphicon-tint"></i><br />
-                <i class="glyphicon glyphicon-profile"></i>
+                <i class="glyphicon glyphicon-tint"></i>
                 New Beans
               <% end %>
             <% end %>
