change buttons for edit/delete

--- a/app/views/coffeebeans/edit.html.erb
+++ b/app/views/coffeebeans/edit.html.erb
@@ -9,7 +9,7 @@
     <%= f.input :best_by, :as => :date_picker %>
     <%= f.input :notes %>
     <%= f.input :score, collection: 1..10 %>
-    <%= f.submit 'Change it mon!', class: 'my-btn' %>
+    <%= f.submit 'Edit this Bean', class: 'btn-success btn' %>
   <% end %>
 
 </div>
