--- a/app/views/coffeebeans/index.html.erb
+++ b/app/views/coffeebeans/index.html.erb
@@ -1,9 +1,9 @@
 <h3 class="text-center"> <strong>My Shelf</strong></h3>
 <br /><br /><br />
-
+<div>
   <% @coffeebeans.each do |coffee| %>
-  <div class="card">
-    <div class="card-block the-box col-xs-10 col-xs-offset-1">
+  <div class="card center-block">
+    <div class="card-block the-box col-xs-10 col-xs-offset-1 ">
       <h4 class="card-title"> <%= coffee.name %> </h4>
       <h6 class="card-subtitle mb-2 text-muted"> <%= coffee.brand %> </h6>
       <h6 class="card-subtitle mb-2 text-muted"> <%= coffee.roast_type %> </h6>
@@ -11,10 +11,11 @@
       <p class="card-text"> <strong>Best by:</strong> <%= datetime_to_compact_date coffee.best_by %> </p>
       <p class="card-text"> <strong>My Score:</strong> <%= coffee.score %> </p>
       <% if current_user == coffee.user %>
-        <%= link_to 'Edit', edit_coffeebean_path(coffee) %>
-        <%= link_to 'Delete', coffeebean_path(coffee), method: :delete, data: {confirm: 'You sure about that?'} %>
+        <%= link_to 'Edit', edit_coffeebean_path(coffee), class: 'btn-warning btn' %>
+        <%= link_to 'Delete', coffeebean_path(coffee), method: :delete, data: {confirm: 'You sure about that?'}, class: 'btn-danger btn' %>
       <% end %>
     </div>
     <br />
   <% end %>
   </div>
+</div>
