--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -26,13 +26,33 @@ html {
 }
 
 .registration-bg {
-  padding-top: 4em;
-  height: 100%;
+  padding-top: 5em;
   background-image: image-url('coffeesplash.png');
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  background-size: 100% auto;
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
+}
+
+.coffeebeans-bg {
+  padding-top: 5em;
+  background-image: image-url('lotbeans.jpg');
+  background-size: 100% auto;
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
 }
 
 .log-in{
@@ -52,11 +72,16 @@ html {
   }
 }
 .login-bg {
-  padding-top: 4em;
-  height: 100%;
-  background-image: image-url('coffeesplash.png');
-  -moz-background-size: cover;
-  -webkit-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+  padding-top: 5em;
+  background-image: image-url('lotbeans.jpg');
+  background-size: 100% auto;
+  min-height: 100%;
+  min-width: 1024px;
+
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+
+  /* Set up positioning */
+  position: fixed;
 }
