change up log in screens

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -73,7 +73,7 @@ html {
 }
 .login-bg {
   padding-top: 5em;
-  background-image: image-url('lotbeans.jpg');
+  background-image: image-url('coffeesplash.png');
   background-size: 100% auto;
   min-height: 100%;
   min-width: 1024px;
