--- a/app/views/coffeebeans/new.html.haml
+++ b/app/views/coffeebeans/new.html.haml
@@ -1,7 +1,7 @@
 .coffeebeans-bg
   .container
     .row
-      .col-md-4.col-md-offset-4
+      .col-xs-5.col-xs-offset-1.col-md-4.col-md-offset-4
         .log-in.panel
           .panel-heading
             %h2 New Beans
