--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -1,7 +1,7 @@
 .registration-bg
   .container
     .row
-      .col-md-4.col-md-offset-4
+      .col-xs-3.col-xs-offset-2.col-md-4.col-md-offset-4
         .log-in.panel
           .panel-heading
             %h2 Create Your Account
