--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,16 +14,9 @@
  *= require_tree .
  *= require_self
  */
-
- .navbar.transparent.navbar-inverse .navbar-inner {
-   margin-bottom: 0px;
-   border-width: 0px;
-   -webkit-box-shadow: 0px 0px;
-   box-shadow: 0px 0px;
-   background-color: rgba(0,0,0,0.0);
-   background-image: -webkit-gradient(linear, 50.00% 0.00%, 50.00% 100.00%, color-stop( 0% , rgba(0,0,0,0.00)),color-stop( 100% , rgba(0,0,0,0.00)));
-   background-image: -webkit-linear-gradient(270deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
-   background-image: linear-gradient(180deg,rgba(0,0,0,0.00) 0%,rgba(0,0,0,0.00) 100%);
+ 
+ .navbar {
+  margin-bottom: 0px;
 }
 
 .alert {
