--- a/app/views/coffeebeans/index.html.haml
+++ b/app/views/coffeebeans/index.html.haml
@@ -1,13 +1,11 @@
 .index-bg
-  %h2.text-center.col-xs-6.col-xs-offset-2.col-md-6.col-md-offset-3
-    %strong.text-warning My Shelf
-  %br
-  %br
+  %h2.text-center.col-xs-4.col-xs-offset-2.col-md-4.col-md-offset-4
+    %strong My Shelf
   %br
   %div
     - @coffeebeans.each do |coffee|
       .card.center-block
-        .card-block.the-box.col-xs-6.col-xs-offset-2.col-md-6.col-md-offset-3
+        .card-block.the-box.col-xs-6.col-xs-offset-1.col-md-6.col-md-offset-3
           %h4.text-center.card-title
             = coffee.name
           %h6.text-center.card-subtitle.mb-2.text-muted
