--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -3,6 +3,10 @@
 
 .row {text-align: center}
 
+.body {
+  padding-top: 70px;
+}
+
 .center-block {
   display: block;
   margin-left: auto;
@@ -32,7 +36,7 @@
 }
 
 html {
-  height: 100%;
+  height: auto;
 }
 
 .index-bg {
@@ -99,8 +103,8 @@ html {
 .login-bg {
   padding-top: 5em;
   background-image: image-url('coffeesplash.png');
-  background-size: 100% auto;
-  min-height: 100%;
+  background-size: auto;
+  min-height: auto;
   min-width: 1024px;
 
   /* Set up proportionate scaling */
