--- a/app/views/coffeebeans/new.html.haml
+++ b/app/views/coffeebeans/new.html.haml
@@ -26,7 +26,7 @@
                                          "Espresso",
                                          "Italian",
                                          "French"]
-              = f.input :best_by, required: true, :as  => :date_picker
+              = f.input :best_by, required: true, placeholder: 'day/month/year. ex: 31/06/2017', :as  => :date_picker
               = f.input :notes, required: true, placeholder: 'Flavor is easier to recall when you write about it!'
               = f.input :score, required: true, collection: 1..10
               = f.button :submit, "Shelf it", class: 'btn-success btn-block'
