--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,7 +1,19 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.row {text-align: center}
+.yachtz {
+	margin-top: 50px;
+	margin-bottom: 50px;
+	background: none;
+}
+
+.land {
+  background: url('lotbeans.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
 
 .body {
   padding-top: 70px;
