--- a/app/views/coffeebeans/index.html.haml
+++ b/app/views/coffeebeans/index.html.haml
@@ -3,7 +3,7 @@
     The Big Picture - Start Bootstrap Template
   %body
     .container
-      .row.the-box.yachtz
-        .col-md-6.col-sm-12
+      .row
+        .the-box.yachtz.col-md-6.col-sm-12
           %h1 The Big Picture
           %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.
