--- a/app/views/coffeebeans/index.html.haml
+++ b/app/views/coffeebeans/index.html.haml
@@ -1,9 +1,9 @@
 %html.land
   %head.the-box.yachtz
-    The Big Picture - Start Bootstrap Template
+    This is the landing page :D
   %body
     .container
       .row
         .the-box.yachtz.col-md-6.col-sm-12
-          %h1 The Big Picture
+          %h1 Test of test
           %p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.
